[package]
name = "nam-blstrs"
description = "High performance implementation of BLS12 381"
version = "0.7.1-nam.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2024"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/blstrs"
documentation = "https://docs.rs/blstrs"
categories = ["cryptography", "algorithms"]
readme = "README.md"
rust-version = "1.85"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
arbitrary = { version = "1.3", features = ["derive"], optional = true }
blst = { package = "nam-blst", version = "0.3.15-nam.0", default-features = true }
rand_core = "0.6"
ff = "0.13"
group = { version = "0.13", features = ["tests"] }
pairing_lib = { version = "0.23", package = "pairing" }
subtle = "2.2.1"

serde = { version = "1.0", features = ["derive"], optional = true }
ec-gpu = { version = "0.2.0", optional = true }
byte-slice-cast = "1.0.0"

[dev-dependencies]
rand_xorshift = "0.3.0"
serde_json = "1.0.57"
hex = "0.4.2"

[features]
default = ["serde"]
portable = ["blst/portable"]
gpu = ["ec-gpu"]
arbitrary = ["dep:arbitrary", "blst/arbitrary"]
__private_bench = []
